--- a/src/_scss/scope/_s-content.scss
+++ b/src/_scss/scope/_s-content.scss
@@ -52,5 +52,12 @@
 
     .highlighter-rouge {
         margin-bottom: 2rem;
+
+        code {
+            body & {
+                // A little hacky but needed to override Prismjs styling
+                white-space: pre-wrap;
+            }
+        }
     }
 }
